[package]
name = "dqea"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-poly = "0.5.0"
ark-std = "0.5.0"
hex = "0.4.3"
hex-literal = "1.1.0"
num-bigint = "0.4.6"
rand = "0.10.1"
rayon = "1.11.0"
sha2 = "0.11.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "dqea_bench"
harness = false
