[package]
name = "hydra_system"
version = "0.1.0"
edition = "2024"

[dependencies]
arkworks-r1cs-gadgets = { version = "1.2.0", default-features = false }
arkworks-native-gadgets = { version = "1.2.0", default-features = false }
ark-bls12-381 = "0.3.0"
ark-ff = { version = "^0.3.0", default-features = false }
ark-std = { version = "^0.3.0", default-features = false }
ark-r1cs-std = { version = "^0.3.0", default-features = false }
ark-relations = { version = "^0.3.0", default-features = false }
arkworks-utils = {version = "1.0.1",default-features = false, features = ["poseidon_bn254_x5_2", "poseidon_bn254_x5_3", "poseidon_bn254_x5_4", "poseidon_bn254_x5_5", "poseidon_bls381_x5_3"] }
ark-groth16 = "0.3.0"
ark-snark = "0.3.0"
ark-crypto-primitives  = "0.3.0"
rayon = "1.11.0"
[dev-dependencies]
ark-crypto-primitives = { version = "^0.3.0", features = ["r1cs"], default-features = false }
ark-groth16 = { version = "^0.3.0", default-features = false }
